--- a/app/views/projects/add.html.erb
+++ b/app/views/projects/add.html.erb
@@ -5,16 +5,21 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
- 
+
   <p>
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </p>
- 
+
   <p>
-    <%= f.label :deadline %><br>
-<!-- date    <%= f.text_field :title %> -->
+    <%= f.label :owner %><br>
+    <%= f.text_field :owner %>
   </p>
+
+  <!-- <p>
+    <%= f.label :deadline %><br>
+    <%= f.text_field :deadline %>
+  </p> -->
 
   <p>
     <%= f.submit %>
